--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "easy-webdev-startpack",
+  "name": "den-kostya",
   "version": "3.1.1",
-  "description": "HTML5+CSS3 template for easy start website project'",
+  "description": "Pet Project2",
   "main": "gulpfile.js",
   "scripts": {
     "html": "gulp",
     "start": "gulp",
-    "build": "gulp libs_style && gulp svg_css && gulp ttf && gulp fonts && gulp style && gulp libs_js && gulp build_js && gulp rastr && gulp webp && gulp svg_sprite && gulp html && gulp php"
+    "build": "gulp style && gulp build_js && gulp rastr && gulp html"
   },
   "author": "",
   "license": "ISC",
@@ -26,8 +26,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify-es": "^2.0.0",
-    "require-dir": "^1.2.0",
-    "vinyl-ftp": "^0.6.1"
+    "require-dir": "^1.2.0"
   },
   "dependencies": {
     "sass": "^1.56.0"
