init project with gulp--build and html/scss files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "den-kostya",
+  "name": "homework",
   "version": "3.1.1",
   "description": "Pet Project2",
   "main": "gulpfile.js",
